Add detail to buttons, inputs, and labels

--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,10 @@ header {
   color: #ffffff;
   display: flex;
   justify-content: space-between;
+  height: 70px;
 }
 
-.navbar__header,
-.navbar__input {
+.navbar__header {
   margin: 0 5px;
 }
 
@@ -25,9 +25,10 @@ span {
 .navbar__input {
   border-radius: 2%;
   font-size: 15px;
-  height: 30px;
+  height: 45px;
   padding: 5px;
-  width: 30%;
+  width: 20%;
+  margin: 0 10px
 }
 
 main {
@@ -42,24 +43,44 @@ aside {
 }
 
 label {
-  margin: 5px;
+  margin: 10px;
+  color: lightgrey;
+}
+
+.sidebar__form1,
+.sidebar__form2 {
+  margin-top: 25px;
+}
+
+.sidebar__form2 {
+  border-bottom: 2px solid #3C6577;
 }
 
 .sidebar__form1--input,
 .sidebar__form2--input {
-  height: 35px;
+  height: 45px;
+  margin: 5px 10px;
+  width: 90%;
+  border-color: #1F1F3D;
+}
+
+.sidebar__form2--button2,
+.sidebar__form2--button3,
+.sidebar__form2--button4 {
+  background-color: #1F1F3D;
+  color: #ffffff;
+  font-size: 18px;
+  height: 45px;
   margin: 5px 10px;
   width: 90%;
 }
 
-.sidebar__form2--button2,
 .sidebar__form2--button3 {
-  background-color: #1F1F3D;
-  color: #ffffff;
-  font-size: 18px;
-  height: 35px;
-  margin: 5px 10px;
-  width: 90%;
+  margin-bottom: 25px;
+}
+
+.sidebar__form2--button4 {
+  margin-top: 25px;
 }
 
 .todo {
