--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ header {
 }
 
 .navbar__header {
-  margin: 0 5px;
+  margin: 0 10px;
 }
 
 span {
@@ -102,6 +102,7 @@ label {
   height: 45px;
   margin: 5px 10px;
   width: 90%;
+  border: none;
 }
 
 .sidebar__form2--button3 {
