--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,15 @@ label {
 
 li {
   color: #ffffff;
+  display: inline-flex;
+  word-break: break-word;
+  margin: 10px 20px;
+}
+
+.sidebar__list--image--delete {
+  height: 20px;
+  width: 20px;
+  margin-right: 5px
 }
 
 .sidebar__form1,
