--- a/styles.css
+++ b/styles.css
@@ -138,23 +138,33 @@ li {
 }
 
 div {
-  height: 200px;
-  width: 200px;
-  border: 1px solid black;
+  min-height: 280px;
+  width: 40%;
+  border: 2px solid #C7D3D8;
+  margin: 3%;
 }
 
 .todo__card--header {
-  border-bottom: 1px solid black;
-  height: 30px;
+  border-bottom: 2px solid #C7D3D8;
+  height: 35px;
+}
+
+h3 {
+  margin-left: 10px;
+  color: #1F1F3D;
 }
 
 .todo__card--middle {
-  height: 130px;
+  min-height: 190px;
+}
+
+.todo__card--task {
+  margin-left: 10px;
+  color: #1F1F3D;
 }
 
 .todo__card--footer {
-  border-top: 1px solid black;
-  height: 30px;
+  border-top: 2px solid #C7D3D8;
   display: flex;
   justify-content: space-between;
 }
@@ -163,10 +173,12 @@ div {
   width: 40px;
   height: 20px;
   margin-top: 10px;
+  color: #3C6577;
 }
 
 .todo__card--button--delete {
   width: 40px;
   height: 20px;
   margin-top: 10px;
+  color: #3C6577;
 }
